RonakT/18/02 - code cleaning

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link
@@ -44,7 +44,7 @@
 
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo1.png" alt="Shreeji Traders" class="img-fluid"></a> -->
       <!-- Uncomment below if you prefer to use text as a logo -->
-      <h1 class="logo"><a href="index.html">Shreeji Traders</a></h1>
+      <h1 class="logo"><a href="index.html"><span style="color:#9B3530" class="first">Shreeji</span> <span style="color:#18143A" class="last">Traders</span></a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -84,7 +84,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>Shreeji Traders</h1>
+          <h1><span style="color:#9B3530" class="first">Shreeji</span> <span style="color:#18143A" class="last">Traders</span></h1>
           <h2>Traders of ferrous and non-ferrous metal, scraps and engineering goods</h2>
           <!-- <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div> -->
         </div>
@@ -105,7 +105,7 @@
           <h2 class="text-center py-4">About Us</h2>
         </div>
         <blockquote>
-          Turning scrap into wealth, making a difference in the world, one trade at a time.
+          Scrap into wealth, making a difference in the world, one trade at a time.
         </blockquote>
         <div class="row">
           <div class="col-xl-5 col-lg-6 d-flex justify-content-center video-box align-items-stretch position-relative">
@@ -117,8 +117,8 @@
             <!-- <h3>Enim quis est voluptatibus aliquid consequatur fugiat</h3> -->
             <p>A scrap trading company with <strong>17 years</strong> of industry experience, Shreeji Traders is a
               well-established and
-              reliable business that has been serving the community for a long time. Established by <strong>Mr. Sanjay
-                Patel</strong>,
+              reliable business that has been serving the community for a long time. Established by <strong>Mr.
+                Sanjaykumar Rambhai Patel</strong>,
               the firm has developed an in-depth understanding of the scrap trading industry, as well as a vast network
               of suppliers, customers, and partners over time. With such a wealth of knowledge and experience, the
               organisation has become a trusted source for scrap materials and its trading, offering customers
@@ -229,7 +229,6 @@
                 our clients</p>
             </div>
           </div>
-
           <div class="col-lg-4 col-md-6" data-wow-delay="0.1s">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-chat-text" style="color: #3fcdc7;"></i></div>
@@ -239,7 +238,6 @@
                 advantage</p>
             </div>
           </div>
-
           <div class="col-lg-6 col-md-6" data-wow-delay="0.2s">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-globe" style="color: #d6ff22;"></i></div>
@@ -360,7 +358,6 @@
               <img src="assets/img/scrap/scrap-5.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>OTHER SCRAP</h4>
-                <p>Card</p>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-5.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Card 3"><i class="bx bx-plus"></i></a>
@@ -410,7 +407,6 @@
               <img src="assets/img/scrap/scrap-4.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>MS SCRAP</h4>
-                <p>Card</p>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-4.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Card 1"><i class="bx bx-plus"></i></a>
@@ -442,20 +438,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/scrap/scrap-6.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-6.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div> -->
 
         </div>
 
@@ -463,86 +445,32 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Gallery Section ======= -->
-    <!-- <section id="gallery" class="gallery">
-      <div class="container">
-
+    <section id="chefs" class="chefs section-bg">
+      <div class="container" data-aos="fade-up">
         <div class="section-title">
-          <h2>Gallery</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <h2>Proprietor</h2>
         </div>
 
-        <div class="row no-gutters">
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-1.jpg" class="galleery-lightbox" data-gallery="gallery-item">
-                <img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-fluid">
-              </a>
+        <div class="row gy-4 justify-content-center">
+          <div class="col-lg-4 col-md-6 d-flex align-items-center" data-aos="fade-up" data-aos-delay="100">
+            <div class="chef-member">
+              <div class="member-img">
+                <img src="assets/img/proprietor.png" class="img-fluid" alt="" />
+              </div>
+              <div class="member-info">
+                <h4>Sanjaykumar Rambhai Patel</h4>
+                <span></span>
+                <p>
+                  Whether you're looking for tiles to cover your floors, or sanitaryware to complete your bathroom, we
+                  have something to suit your needs and budget.
+                </p>
+              </div>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-2.jpg" class="galleery-lightbox" data-gallery="gallery-item">
-                <img src="assets/img/gallery/gallery-2.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-3.jpg" class="galleery-lightbox" data-gallery="gallery-item">
-                <img src="assets/img/gallery/gallery-3.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-4.jpg" class="galleery-lightbox" data-gallery="gallery-item">
-                <img src="assets/img/gallery/gallery-4.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-5.jpg" class="galleery-lightbox" data-gallery="gallery-item">
-                <img src="assets/img/gallery/gallery-5.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-6.jpg" class="galleery-lightbox" data-gallery="gallery-item">
-                <img src="assets/img/gallery/gallery-6.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-7.jpg" class="galleery-lightbox" data-gallery="gallery-item">
-                <img src="assets/img/gallery/gallery-7.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-8.jpg" class="galleery-lightbox" data-gallery="gallery-item">
-                <img src="assets/img/gallery/gallery-8.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
+          <!-- End Chefs Member -->
         </div>
-
       </div>
-    </section> -->
+    </section>
     <!-- End Gallery Section -->
 
     <!-- ======= Contact Section ======= -->
@@ -575,7 +503,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>shreejitraders10779.com</p>
+                <p>shreejitraders10779@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -590,7 +518,8 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form id ="contact-form" class="contact-form" action="https://api.web3forms.com/submit" method="POST">
+              <input type="hidden" name="access_key" value="48095463-ece4-47c7-b3b3-f31232f2d">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -610,7 +539,8 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <input type="hidden" name="redirect" value="https://web3forms.com/success">                    
+              <button type="submit" class="btn btn-primary btn-xl">Submit Form</button>
             </form>
 
           </div>
@@ -655,21 +585,8 @@
               Ahmedabad, Gujarat <br><br>
             </p>
             <p><strong>Phone:</strong> +91 9898 002 569<br></p>
-            <p><strong>Email:</strong> shreejitraders10779.com<br></p>
+            <p><strong>Email:</strong> shreejitraders10779@gmail.com<br></p>
           </div>
-
-          <!-- <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Social Networks</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
-            <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div>
-          </div> -->
-
         </div>
       </div>
     </div>
