--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <!-- <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
+  <link href="assets/img/favicon.ico" rel="icon">
+  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link
@@ -52,6 +52,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Our Products</a></li>
+          <li><a class="nav-link scrollto " href="#chefs">Founder</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -296,7 +297,7 @@
                 <h4>Stainless-steel Scrap</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/stainless steel scrap.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -309,7 +310,7 @@
                 <h4>STEEL PIPEs & FITTINGS SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Card 2"><i class="bx bx-plus"></i></a>
+                    ><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -321,8 +322,7 @@
               <div class="portfolio-info">
                 <h4>ALUMINIUM SHEETS</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -333,8 +333,7 @@
               <div class="portfolio-info">
                 <h4>MS SCRAP</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-7.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-7.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -347,7 +346,7 @@
                 <h4>STEEL SHEETS</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="App 3"><i class="bx bx-plus"></i></a>
+                    ><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -357,10 +356,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/scrap-5.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>OTHER SCRAP</h4>
+                <h4>COMMERCIAL SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-5.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Card 3"><i class="bx bx-plus"></i></a>
+                    ><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -373,7 +372,7 @@
                 <h4>HOUSEHOLD SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-6.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Web 3"><i class="bx bx-plus"></i></a>
+                    ><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -385,7 +384,7 @@
                 <h4>MS SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-7.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Web 3"><i class="bx bx-plus"></i></a>
+                    ><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -394,10 +393,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/scrap-8.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>MS SCRAP</h4>
+                <h4>STEEL SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-8.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Web 3"><i class="bx bx-plus"></i></a>
+                    ><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -406,10 +405,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/scrap-4.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>MS SCRAP</h4>
+                <h4>STEEL SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/scrap-4.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Card 1"><i class="bx bx-plus"></i></a>
+                    ><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -421,7 +420,7 @@
                 <h4>MS-SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/ms-scrap.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="App 1"><i class="bx bx-plus"></i></a>
+                    ><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -433,7 +432,7 @@
                 <h4>TURING SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/turing-scrap.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -519,7 +518,7 @@
           <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form id ="contact-form" class="contact-form" action="https://api.web3forms.com/submit" method="POST">
-              <input type="hidden" name="access_key" value="48095463-ece4-47c7-b3b3-f31232f2d">
+              <input type="hidden" name="access_key" value="d79dc592-ee3f-47db-9f9c-2e4148ca7000">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
