--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo1.png" alt="Shreeji Traders" class="img-fluid"></a> -->
       <!-- Uncomment below if you prefer to use text as a logo -->
-      <h1 class="logo"><a href="index.html"><span style="color:#9B3530" class="first">Shreeji</span> <span style="color:#18143A" class="last">Traders</span></a></h1>
+      <h1 class="logo"><a href="index.html"><span style="color:#9B3530" class="first">Shreeji</span> <span
+            style="color:#18143A" class="last">Traders</span></a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -85,7 +86,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1><span style="color:#9B3530" class="first">Shreeji</span> <span style="color:#18143A" class="last">Traders</span></h1>
+          <h1><span style="color:#9B3530" class="first">Shreeji</span> <span style="color:#18143A"
+              class="last">Traders</span></h1>
           <h2>Traders of ferrous and non-ferrous metal, scraps and engineering goods</h2>
           <!-- <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div> -->
         </div>
@@ -297,7 +299,7 @@
                 <h4>Stainless-steel Scrap</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/stainless steel scrap.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -309,8 +311,8 @@
               <div class="portfolio-info">
                 <h4>STEEL PIPEs & FITTINGS SCRAP</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    ><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -322,7 +324,8 @@
               <div class="portfolio-info">
                 <h4>ALUMINIUM SHEETS</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -333,7 +336,8 @@
               <div class="portfolio-info">
                 <h4>MS SCRAP</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-7.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-7.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -345,8 +349,8 @@
               <div class="portfolio-info">
                 <h4>STEEL SHEETS</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    ><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -358,8 +362,8 @@
               <div class="portfolio-info">
                 <h4>COMMERCIAL SCRAP</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-5.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    ><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-5.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -371,8 +375,8 @@
               <div class="portfolio-info">
                 <h4>HOUSEHOLD SCRAP</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-6.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    ><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-6.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -383,8 +387,8 @@
               <div class="portfolio-info">
                 <h4>MS SCRAP</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-7.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    ><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-7.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -395,8 +399,8 @@
               <div class="portfolio-info">
                 <h4>STEEL SCRAP</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-8.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    ><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-8.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -407,8 +411,8 @@
               <div class="portfolio-info">
                 <h4>STEEL SCRAP</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/scrap-4.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    ><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/scrap-4.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -419,8 +423,8 @@
               <div class="portfolio-info">
                 <h4>MS-SCRAP</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/scrap/ms-scrap.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    ><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/scrap/ms-scrap.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i
+                      class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -429,10 +433,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/scrap/turing-scrap.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>TURING SCRAP</h4>
+                <h4>TURNING SCRAP</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/scrap/turing-scrap.jpeg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" ><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -460,8 +464,8 @@
                 <h4>Sanjaykumar Rambhai Patel</h4>
                 <span></span>
                 <p>
-                  Whether you're looking for tiles to cover your floors, or sanitaryware to complete your bathroom, we
-                  have something to suit your needs and budget.
+                  We have a team of experts who are well-versed in the industry and are dedicated to providing our
+                  clients with the best possible service nad material.
                 </p>
               </div>
             </div>
@@ -517,7 +521,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form id ="contact-form" class="contact-form" action="https://api.web3forms.com/submit" method="POST">
+            <form id="contact-form" class="contact-form" action="https://api.web3forms.com/submit" method="POST">
               <input type="hidden" name="access_key" value="d79dc592-ee3f-47db-9f9c-2e4148ca7000">
               <div class="row">
                 <div class="col-md-6 form-group">
@@ -533,12 +537,12 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
-              <div class="my-3">
+              <!-- <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <input type="hidden" name="redirect" value="https://web3forms.com/success">                    
+              </div> -->
+              <input type="hidden" name="redirect" value="https://web3forms.com/success">
               <button type="submit" class="btn btn-primary btn-xl">Submit Form</button>
             </form>
 
